--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,10 +9,13 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <link href="~/Views/Home/StyleSheet1.css" rel="stylesheet" />
+
 </head>
 <body>
-    MI PRIMER PROGRAMA
+    MI PRIMER PROGRAMA.
     <div> 
+        otra version
     </div>
 </body>
 </html>
