esta es otra version denbtro de la rama master

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,5 +20,6 @@
     <div>
         otra version en la rama test
     </div>
+    <p style="color:red;">testo rojo en la rama colores</p>
 </body>
 </html>
