agregamos una tabla colo azul

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,5 +21,8 @@
         otra version en la rama test
     </div>
     <p style="color:red;">testo rojo en la rama colores</p>
+    <div>
+        <p style="color:blue;">TABLA</p>
+    </div>
 </body>
 </html>
